--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </style>
   <!-- Подключение стилей flatpickr -->
   <link href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css" rel="stylesheet"/>
-</head>
+<script src="https://telegram.org/js/telegram-web-app.js"></script></head>
 <body>
   <form data-content-type="web_app_data" enctype="multipart/form-data">
     <div>
@@ -20,7 +20,7 @@
       <input id="totalAmount" name="totalAmount" placeholder="Фамилия" type="text"/>
     </div>
     <div>
-      <label for="street">Имя</label>
+      <label for="street">И!!!мя</label>
       <input id="street" name="street" placeholder="Имя" type="text"/>
     </div>
     <div>
@@ -336,6 +336,14 @@ document.addEventListener("DOMContentLoaded", function() {
             btn.setAttribute('disabled', 'disabled');
         }
     });
+</script>
+
+<script>
+    let tg = window.Telegram.WebApp;
+
+    function sendDataToBot(data) {
+        tg.sendData(JSON.stringify(data));
+    }
 </script>
 </body>
 </html>
